--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   
   
   firebase_database: ^3.1.1
-  firebase_auth: ^0.16.1
+  firebase_auth: 0.5.4
   splashscreen : 1.2.0
   flutter_signin_button: ^1.0.0
   
